Fix Clipping On Navigation Bar

--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ h1 {
   height: 100%;
   min-width: 60%;
   background-image: url(assets/navbar.png);;
-  background-size: cover;
+  background-size: 100% 100%;
 }
 .header ul {
   color: black;
